--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,46 +18,55 @@ jobs:
         with:
           node-version: '20'
 
-      # 3️⃣ Install npm dependencies
-      - name: Install npm packages
+      # 3️⃣ Debug Node & npm
+      - name: Check Node and npm
         shell: bash
         run: |
           cd Smartcent_Ready
           node -v
           npm -v
+          ls -la
+          pwd
+
+      # 4️⃣ Install npm dependencies
+      - name: Install npm packages
+        shell: bash
+        run: |
+          cd Smartcent_Ready
           npm install --legacy-peer-deps
 
-      # 4️⃣ Build React/Vite Web Assets
+      # 5️⃣ Build React/Vite Web Assets
       - name: Build Web Assets
         shell: bash
         run: |
           cd Smartcent_Ready
           npm run build
 
-      # 5️⃣ Capacitor sync Android
+      # 6️⃣ Capacitor sync Android
       - name: Capacitor Sync
         shell: bash
         run: |
           cd Smartcent_Ready
           npx cap sync android
 
-      # 6️⃣ Set Gradle permissions
+      # 7️⃣ Set Gradle permissions
       - name: Prepare Gradle
         shell: bash
         run: |
           cd Smartcent_Ready/android
           chmod +x gradlew
 
-      # 7️⃣ Create temporary signing keystore
+      # 8️⃣ Create temporary signing keystore
       - name: Create Signing Keystore
         shell: bash
         run: |
           cd Smartcent_Ready/android
           keytool -genkey -v -keystore release.keystore -alias releasekey \
             -keyalg RSA -keysize 2048 -validity 10000 \
-            -storepass 123456 -keypass 123456 -dname "CN=App, OU=Dev, O=YourCompany, L=City, S=State, C=US"
+            -storepass 123456 -keypass 123456 \
+            -dname "CN=App, OU=Dev, O=YourCompany, L=City, S=State, C=US"
 
-      # 8️⃣ Configure signing in gradle.properties
+      # 9️⃣ Configure signing in gradle.properties
       - name: Configure Signing
         shell: bash
         run: |
@@ -67,14 +76,14 @@ jobs:
           echo "RELEASE_STORE_PASSWORD=123456" >> gradle.properties
           echo "RELEASE_KEY_PASSWORD=123456" >> gradle.properties
 
-      # 9️⃣ Build Signed Release APK
+      # 🔟 Build Signed Release APK
       - name: Build APK
         shell: bash
         run: |
           cd Smartcent_Ready/android
           ./gradlew assembleRelease
 
-      # 🔟 Upload APK artifact
+      # 1️⃣1️⃣ Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
