--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,57 +10,47 @@ jobs:
       JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
 
     steps:
-      # 1️⃣ Checkout repository
       - uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js 20
+      # Setup Node.js 20
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # 3️⃣ Debug: تأكد من ملفات المشروع
-      - name: Debug project folder
-        shell: bash
+      # Debug: تحقق من وجود package.json في www
+      - name: Check www folder
         run: |
-          cd Smartcent_Ready
+          cd Smartcent_Ready/www
+          ls -la
           node -v
           npm -v
-          ls -la
-          ls -la www
-          ls -la www/src
-          ls -la www/public
 
-      # 4️⃣ Install npm dependencies (مع تجاوز مشاكل peer deps)
+      # Install npm dependencies في www
       - name: Install npm packages
-        shell: bash
         run: |
-          cd Smartcent_Ready
+          cd Smartcent_Ready/www
           npm install --legacy-peer-deps
 
-      # 5️⃣ Build Web Assets باستخدام Vite مباشرة
+      # Build Web Assets من www
       - name: Build Web Assets
-        shell: bash
         run: |
           cd Smartcent_Ready/www
           npx vite build --outDir ../android/app/src/main/assets/public
 
-      # 6️⃣ Capacitor sync Android
-      - name: Capacitor Sync
-        shell: bash
+      # Capacitor sync
+      - name: Capacitor Sync Android
         run: |
           cd Smartcent_Ready
           npx cap sync android
 
-      # 7️⃣ Prepare Gradle
+      # Prepare Gradle
       - name: Prepare Gradle
-        shell: bash
         run: |
           cd Smartcent_Ready/android
           chmod +x gradlew
 
-      # 8️⃣ Create temporary signing keystore
+      # Create Signing Keystore
       - name: Create Signing Keystore
-        shell: bash
         run: |
           cd Smartcent_Ready/android
           keytool -genkey -v -keystore release.keystore -alias releasekey \
@@ -68,9 +58,8 @@ jobs:
             -storepass 123456 -keypass 123456 \
             -dname "CN=App, OU=Dev, O=YourCompany, L=City, S=State, C=US"
 
-      # 9️⃣ Configure signing in gradle.properties
+      # Configure Signing
       - name: Configure Signing
-        shell: bash
         run: |
           cd Smartcent_Ready/android
           echo "RELEASE_STORE_FILE=release.keystore" >> gradle.properties
@@ -78,14 +67,13 @@ jobs:
           echo "RELEASE_STORE_PASSWORD=123456" >> gradle.properties
           echo "RELEASE_KEY_PASSWORD=123456" >> gradle.properties
 
-      # 🔟 Build Signed Release APK
+      # Build Signed Release APK
       - name: Build APK
-        shell: bash
         run: |
           cd Smartcent_Ready/android
           ./gradlew assembleRelease
 
-      # 1️⃣1️⃣ Upload APK artifact
+      # Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
