--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Sign Android APK
+name: Full Android Build & Sign
 
 on:
   workflow_dispatch:
@@ -6,51 +6,61 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     env:
       JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
 
     steps:
+      # 1️⃣ Checkout repository
       - uses: actions/checkout@v4
 
-      # Setup Node.js 20
+      # 2️⃣ Setup Node.js 20
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # Debug: تحقق من وجود package.json في www
-      - name: Check www folder
+      # 3️⃣ Debug: تحقق من ملفات المشروع
+      - name: Debug project folder
+        shell: bash
         run: |
           cd Smartcent_Ready/www
-          ls -la
           node -v
           npm -v
+          ls -la
+          ls -la src
+          ls -la public
 
-      # Install npm dependencies في www
+      # 4️⃣ Install npm dependencies في www
       - name: Install npm packages
+        shell: bash
         run: |
           cd Smartcent_Ready/www
           npm install --legacy-peer-deps
 
-      # Build Web Assets من www
+      # 5️⃣ Build Web Assets مباشرة من www إلى Android
       - name: Build Web Assets
+        shell: bash
         run: |
           cd Smartcent_Ready/www
           npx vite build --outDir ../android/app/src/main/assets/public
 
-      # Capacitor sync
-      - name: Capacitor Sync Android
+      # 6️⃣ Capacitor sync Android
+      - name: Capacitor Sync
+        shell: bash
         run: |
           cd Smartcent_Ready
           npx cap sync android
 
-      # Prepare Gradle
+      # 7️⃣ Prepare Gradle
       - name: Prepare Gradle
+        shell: bash
         run: |
           cd Smartcent_Ready/android
           chmod +x gradlew
 
-      # Create Signing Keystore
+      # 8️⃣ Create temporary signing keystore
       - name: Create Signing Keystore
+        shell: bash
         run: |
           cd Smartcent_Ready/android
           keytool -genkey -v -keystore release.keystore -alias releasekey \
@@ -58,8 +68,9 @@ jobs:
             -storepass 123456 -keypass 123456 \
             -dname "CN=App, OU=Dev, O=YourCompany, L=City, S=State, C=US"
 
-      # Configure Signing
+      # 9️⃣ Configure signing in gradle.properties
       - name: Configure Signing
+        shell: bash
         run: |
           cd Smartcent_Ready/android
           echo "RELEASE_STORE_FILE=release.keystore" >> gradle.properties
@@ -67,13 +78,14 @@ jobs:
           echo "RELEASE_STORE_PASSWORD=123456" >> gradle.properties
           echo "RELEASE_KEY_PASSWORD=123456" >> gradle.properties
 
-      # Build Signed Release APK
+      # 🔟 Build Signed Release APK
       - name: Build APK
+        shell: bash
         run: |
           cd Smartcent_Ready/android
           ./gradlew assembleRelease
 
-      # Upload APK artifact
+      # 1️⃣1️⃣ Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
