--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       NODE_VERSION: 20
       JAVA_VERSION: 21
     steps:
-      # 1️⃣ Checkout code
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -50,23 +50,23 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 6️⃣ Install npm dependencies in Smartcent_Ready
+      # 6️⃣ Install npm dependencies
       - name: Install npm dependencies
         run: |
-          cd ./Smartcent_Ready
+          cd Smartcent_Ready
           npm install
 
       # 7️⃣ Build React/Vite project
       - name: Build React/Vite project
         run: |
-          cd ./Smartcent_Ready
+          cd Smartcent_Ready
           npm run build
 
       # 8️⃣ Copy build output to Android assets/public
       - name: Copy build to Android assets
         run: |
-          mkdir -p ./Smartcent_Ready/android/app/src/main/assets/public
-          cp -r ./Smartcent_Ready/www/dist/* ./Smartcent_Ready/android/app/src/main/assets/public/
+          mkdir -p Smartcent_Ready/android/app/src/main/assets/public
+          cp -r Smartcent_Ready/www/dist/* Smartcent_Ready/android/app/src/main/assets/public/
 
       # 9️⃣ Install Capacitor CLI
       - name: Install Capacitor CLI
@@ -75,31 +75,31 @@ jobs:
       # 🔟 Sync Capacitor Android
       - name: Sync Capacitor
         run: |
-          cd ./Smartcent_Ready
+          cd Smartcent_Ready
           npx cap sync android
 
-      # 1️⃣1️⃣ Prepare keystore for signing (Release APK)
+      # 1️⃣1️⃣ Prepare keystore for signing
       - name: Prepare keystore
         run: |
-          echo "$RELEASE_KEYSTORE" | base64 --decode > ./Smartcent_Ready/android/app/my-release-key.jks
+          echo "$RELEASE_KEYSTORE" | base64 --decode > Smartcent_Ready/android/app/my-release-key.jks
 
       # 1️⃣2️⃣ Prepare gradlew
       - name: Prepare gradlew
         run: |
-          cd ./Smartcent_Ready/android
+          cd Smartcent_Ready/android
           chmod +x ./gradlew
           sed -i 's/\r$//' ./gradlew
 
       # 1️⃣3️⃣ Build Debug APK
       - name: Build Debug APK
         run: |
-          cd ./Smartcent_Ready/android
+          cd Smartcent_Ready/android
           ./gradlew assembleDebug --no-daemon --parallel --configure-on-demand
 
       # 1️⃣4️⃣ Build Signed Release APK
       - name: Build Signed Release APK
         run: |
-          cd ./Smartcent_Ready/android
+          cd Smartcent_Ready/android
           ./gradlew assembleRelease \
             -PreleaseStoreFile=app/my-release-key.jks \
             -PreleaseStorePassword=$RELEASE_STORE_PASSWORD \
@@ -107,11 +107,11 @@ jobs:
             -PreleaseKeyPassword=$RELEASE_KEY_PASSWORD \
             --no-daemon --parallel --configure-on-demand
 
-      # 1️⃣5️⃣ Upload APKs as Artifacts
+      # 1️⃣5️⃣ Upload APKs
       - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
           name: android-apks
           path: |
-            ./Smartcent_Ready/android/app/build/outputs/apk/debug/*.apk
-            ./Smartcent_Ready/android/app/build/outputs/apk/release/*.apk
+            Smartcent_Ready/android/app/build/outputs/apk/debug/*.apk
+            Smartcent_Ready/android/app/build/outputs/apk/release/*.apk
