--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       NODE_VERSION: 20
       JAVA_VERSION: 21
+
     steps:
       # 1️⃣ Checkout repository
       - name: Checkout repository
@@ -50,7 +51,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 6️⃣ Install npm dependencies
+      # 6️⃣ Install npm dependencies (Tailwind + React + PostCSS)
       - name: Install npm dependencies
         run: |
           cd Smartcent_Ready
@@ -87,8 +88,8 @@ jobs:
       - name: Prepare gradlew
         run: |
           cd Smartcent_Ready/android
-          chmod +x ./gradlew
-          sed -i 's/\r$//' ./gradlew
+          chmod +x gradlew
+          sed -i 's/\r$//' gradlew
 
       # 1️⃣3️⃣ Build Debug APK
       - name: Build Debug APK
@@ -107,7 +108,7 @@ jobs:
             -PreleaseKeyPassword=$RELEASE_KEY_PASSWORD \
             --no-daemon --parallel --configure-on-demand
 
-      # 1️⃣5️⃣ Upload APKs
+      # 1️⃣5️⃣ Upload APKs as Artifacts
       - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
