--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       JAVA_VERSION: 21
 
     steps:
-      # 1️⃣ Checkout repository
+      # 1️⃣ Checkout code
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -51,53 +51,48 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 6️⃣ Install npm dependencies (Tailwind + React + PostCSS)
-      - name: Install npm dependencies
-        run: |
-          cd Smartcent_Ready
-          npm install
-
-      # 7️⃣ Build React/Vite project
+      # 6️⃣ Install npm dependencies and build web assets
       - name: Build React/Vite project
         run: |
-          cd Smartcent_Ready
+          cd Smartcent_Ready/www
+          npm install
           npm run build
 
-      # 8️⃣ Copy build output to Android assets/public
+      # 7️⃣ Copy build output to Android assets/public
       - name: Copy build to Android assets
         run: |
           mkdir -p Smartcent_Ready/android/app/src/main/assets/public
           cp -r Smartcent_Ready/www/dist/* Smartcent_Ready/android/app/src/main/assets/public/
 
-      # 9️⃣ Install Capacitor CLI
+      # 8️⃣ Install Capacitor CLI
       - name: Install Capacitor CLI
         run: npm install -g @capacitor/cli
 
-      # 🔟 Sync Capacitor Android
+      # 9️⃣ Sync Capacitor Android
       - name: Sync Capacitor
         run: |
           cd Smartcent_Ready
           npx cap sync android
 
-      # 1️⃣1️⃣ Prepare keystore for signing
+      # 🔟 Prepare keystore for signing
       - name: Prepare keystore
         run: |
           echo "$RELEASE_KEYSTORE" | base64 --decode > Smartcent_Ready/android/app/my-release-key.jks
 
-      # 1️⃣2️⃣ Prepare gradlew
+      # 1️⃣1️⃣ Prepare gradlew
       - name: Prepare gradlew
         run: |
           cd Smartcent_Ready/android
           chmod +x gradlew
           sed -i 's/\r$//' gradlew
 
-      # 1️⃣3️⃣ Build Debug APK
+      # 1️⃣2️⃣ Build Debug APK
       - name: Build Debug APK
         run: |
           cd Smartcent_Ready/android
           ./gradlew assembleDebug --no-daemon --parallel --configure-on-demand
 
-      # 1️⃣4️⃣ Build Signed Release APK
+      # 1️⃣3️⃣ Build Signed Release APK
       - name: Build Signed Release APK
         run: |
           cd Smartcent_Ready/android
@@ -108,7 +103,7 @@ jobs:
             -PreleaseKeyPassword=$RELEASE_KEY_PASSWORD \
             --no-daemon --parallel --configure-on-demand
 
-      # 1️⃣5️⃣ Upload APKs as Artifacts
+      # 1️⃣4️⃣ Upload APKs as Artifacts
       - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
